--- a/package.json
+++ b/package.json
@@ -6,17 +6,34 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint --ext  .ts,.tsx src",
+    "pretty": "prettier --check \"./src/**/*.{ts,tsx}\"",
+    "lint:fix": "eslint --fix --ext .ts,.tsx src",
+    "pretty:fix": "prettier --write \"./src/**/*.{ts,tsx}\""
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.6.2"
   },
   "devDependencies": {
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "@vitejs/plugin-react-swc": "^3.0.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.0.0"
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.9",
+    "@typescript-eslint/eslint-plugin": "5.48.1",
+    "@typescript-eslint/parser": "5.48.1",
+    "@vitejs/plugin-react-swc": "3.0.0",
+    "autoprefixer": "10.4.13",
+    "eslint": "8.31.0",
+    "eslint-import-resolver-typescript": "3.5.3",
+    "eslint-plugin-import": "2.27.4",
+    "eslint-plugin-react": "7.32.0",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "postcss": "8.4.21",
+    "prettier": "2.8.3",
+    "tailwindcss": "3.2.4",
+    "typescript": "4.9.4",
+    "vite": "4.0.0",
+    "vite-tsconfig-paths": "4.0.3"
   }
 }
