--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,13 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": ".",
+    "paths": {
+      "@app/*": ["src/*"]
+    },
   },
-  "include": ["src"],
+  "exclude": ["node_modules"],
+  "include": ["**/*.ts", "**/*.tsx", "types.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
