add match-sorter and sort-by

--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "pretty:fix": "prettier --write \"./src/**/*.{ts,tsx}\""
   },
   "dependencies": {
+    "match-sorter": "^6.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "3.39.2",
-    "react-router-dom": "6.6.2"
+    "react-router-dom": "6.6.2",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "18.0.26",
