--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "pretty:fix": "prettier --write \"./src/**/*.{ts,tsx}\""
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.13",
     "match-sorter": "6.3.1",
     "react": "18.2.0",
     "react-aria": "3.22.0",
