--- a/package.json
+++ b/package.json
@@ -13,14 +13,13 @@
     "pretty:fix": "prettier --write \"./src/**/*.{ts,tsx}\""
   },
   "dependencies": {
+    "@headlessui/react": "1.7.7",
     "@heroicons/react": "^2.0.13",
     "match-sorter": "6.3.1",
     "react": "18.2.0",
-    "react-aria": "3.22.0",
     "react-dom": "18.2.0",
     "react-query": "3.39.2",
     "react-router-dom": "6.6.2",
-    "react-stately": "3.20.0",
     "sort-by": "1.2.0"
   },
   "devDependencies": {
