--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@headlessui/react": "1.7.7",
     "@heroicons/react": "^2.0.13",
+    "@types/sort-by": "^1.2.0",
     "classnames": "2.3.2",
     "match-sorter": "6.3.1",
     "react": "18.2.0",
