--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint --ext  .ts,.tsx src",
     "pretty": "prettier --check \"./src/**/*.{ts,tsx}\"",
     "lint:fix": "eslint --fix --ext .ts,.tsx src",
-    "pretty:fix": "prettier --write \"./src/**/*.{ts,tsx}\""
+    "pretty:fix": "prettier --write \"./src/**/*.{ts,tsx}\"",
+    "test": "jest"
   },
   "dependencies": {
     "@headlessui/react": "1.7.7",
@@ -25,6 +26,11 @@
     "sort-by": "1.2.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "13.4.0",
+    "@testing-library/user-event": "14.4.3",
+    "@types/jest": "29.2.5",
+    "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "@typescript-eslint/eslint-plugin": "5.48.1",
@@ -36,11 +42,54 @@
     "eslint-plugin-import": "2.27.4",
     "eslint-plugin-react": "7.32.0",
     "eslint-plugin-react-hooks": "4.6.0",
+    "jest": "29.3.1",
+    "jest-environment-jsdom": "29.3.1",
+    "jest-watch-typeahead": "2.2.1",
     "postcss": "8.4.21",
     "prettier": "2.8.3",
     "tailwindcss": "3.2.4",
+    "ts-jest": "29.0.5",
+    "ts-node": "10.9.1",
     "typescript": "4.9.4",
     "vite": "4.0.0",
     "vite-tsconfig-paths": "4.0.3"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "roots": [
+      "<rootDir>/src"
+    ],
+    "modulePathIgnorePatterns": [
+      "<rootDir>/src/components_old/"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/jest/mocks/jest.setup.ts"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.{ts,tsx}",
+      "!src/**/*.d.ts"
+    ],
+    "testMatch": [
+      "<rootDir>/src/**/__tests__/**/*.{ts,tsx}",
+      "<rootDir>/src/**/*.{spec,test}.{ts,tsx}"
+    ],
+    "testEnvironment": "jsdom",
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest",
+      "^.+\\.(js|jsx|mjs|cjs)$": "<rootDir>/node_modules/babel-jest"
+    },
+    "transformIgnorePatterns": [
+      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs|cjs)$"
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png)$": "identity-obj-proxy",
+      ".(css|sass|scss)$": "identity-obj-proxy",
+      "^@app(.*)$": "<rootDir>/src$1"
+    },
+    "watchPlugins": [
+      "jest-watch-typeahead/filename",
+      "jest-watch-typeahead/testname"
+    ],
+    "resetMocks": true
   }
 }
